--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -1,4 +1,4 @@
-\chapter{Cooperation between TMHs facilitates translocation of relatively polar TMHs.}
+\chapter{Cooperation between TMHs facilitates translocation of marginally hydrophobic TMHs.}
 \chaptermark{Cooperation between TMHs...}
 \section{Abstract}
 
