--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,118 @@
+@article{Davis1985,
+abstract = {A hydrophobic sequence of 23 contiguous, uncharged residues anchors the coliphage f1 gene III protein (pIII) to the Escherichia coil cytoplasmic membrane; mutations removing this domain allow secretion of the protein to the periplasm. Multiple copies of an oligonucleotide encoding the hydrophobic repeat, Leu-Ala-Leu-Val, were introduced into genes for secreted forms of pIII. Artificial domains of 16 or more hydrophobic residues function to anchor the protein. Pronase protection experiments demonstrate that the new sequences act to halt transfer of the protein across the membrane, thus specifying a transmembrane topology. Relocating the hydrophobic domain within the polypeptide chain predictably alters the resultant protein/membrane topology. Repeats of a polar sequence were inserted with no effect on secretion. Furthermore, an unrelated hydrophobic sequence, uncovered by a gene III frameshift mutation, acts to anchor the protein. We conclude that function simply reflects hydrophobicity and not some more subtle feature of structure or sequence. {\textcopyright} 1985 MIT.},
+author = {Davis, Nicholas G. and Model, Peter},
+doi = {10.1016/S0092-8674(85)80033-7},
+isbn = {0092-8674},
+issn = {00928674},
+journal = {Cell},
+number = {2},
+pages = {607--614},
+pmid = {3886166},
+title = {{An artificial anchor domain: hydrophobicity suffices to stop transfer}},
+url = {https://www.sciencedirect.com/science/article/pii/S0092867485800337},
+volume = {41},
+year = {1985}
+}
+@article{Choo2009,
+abstract = {Amino-terminal signal peptides (SPs) are short regions that guide the targeting of secretory proteins to the correct subcellular compartments in the cell. They are cleaved off upon the passenger protein reaching its destination. The explosive growth in sequencing technologies has led to the deposition of vast numbers of protein sequences necessitating rapid functional annotation techniques, with subcellular localization being a key feature. Of the myriad software prediction tools developed to automate the task of assigning the SP cleavage site of these new sequences, we review here, the performance and reliability of commonly used SP prediction tools. The available signal peptide data has been manually curated and organized into three datasets representing eukaryotes, Gram-positive and Gram-negative bacteria. These datasets are used to evaluate thirteen prediction tools that are publicly available. SignalP (both the HMM and ANN versions) maintains consistency and achieves the best overall accuracy in all three benchmarking experiments, ranging from 0.872 to 0.914 although other prediction tools are narrowing the performance gap. The majority of the tools evaluated in this study encounter no difficulty in discriminating between secretory and non-secretory proteins. The challenge clearly remains with pinpointing the correct SP cleavage site. The composite scoring schemes employed by SignalP may help to explain its accuracy. Prediction task is divided into a number of separate steps, thus allowing each score to tackle a particular aspect of the prediction.},
+author = {Choo, Khar and Tan, Tin and Ranganathan, Shoba},
+doi = {10.1186/1471-2105-10-S15-S2},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Choo, Tan, Ranganathan - 2009 - A comprehensive assessment of N-terminal signal peptides prediction methods.pdf:pdf},
+issn = {1471-2105},
+journal = {BMC Bioinformatics},
+keywords = {Algorithms,Bioinformatics,Combinatorial Libraries,Computational Biology/Bioinformatics,Computer Appl. in Life Sciences,Microarrays},
+month = {dec},
+number = {Suppl 15},
+pages = {S2},
+publisher = {BioMed Central},
+title = {{A comprehensive assessment of N-terminal signal peptides prediction methods}},
+url = {http://www.biomedcentral.com/1471-2105/10/S15/S2},
+volume = {10},
+year = {2009}
+}
+@article{Gierasch1989,
+author = {Gierasch, Lila M.},
+doi = {10.1021/bi00429a001},
+issn = {0006-2960},
+journal = {Biochemistry},
+month = {feb},
+number = {3},
+pages = {923--930},
+publisher = {American Chemical Society},
+title = {{Signal sequences}},
+url = {http://pubs.acs.org/doi/abs/10.1021/bi00429a001},
+volume = {28},
+year = {1989}
+}
+@article{Izard1994,
+author = {Izard, Jennifer W. and Kendall, Debra A.},
+doi = {10.1111/j.1365-2958.1994.tb00469.x},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Izard, Kendall - 1994 - Signal peptides exquisitely designed transport promoters.pdf:pdf},
+issn = {0950-382X},
+journal = {Molecular Microbiology},
+month = {sep},
+number = {5},
+pages = {765--773},
+publisher = {Wiley/Blackwell (10.1111)},
+title = {{Signal peptides: exquisitely designed transport promoters}},
+url = {http://doi.wiley.com/10.1111/j.1365-2958.1994.tb00469.x},
+volume = {13},
+year = {1994}
+}
+@article{VonHeijne1985,
+abstract = {Variations in length and composition of the charged N-terminal, central hydrophobic and polar C-terminal regions in a large sample of signal sequences have been mapped, both as a function of the overall length of the sequence, and in an absolute sense, i.e. various “extremes” have been sought. The results show subtle differences between eukaryotic and prokaryotic sequences, but the general impression of signal sequences as being highly variable is reinforced. Criteria for a “minimal” signal sequence are suggested and discussed.},
+author = {von Heijne, Gunnar},
+doi = {10.1016/0022-2836(85)90046-4},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/von Heijne - 1985 - Signal sequences The limits of variation.pdf:pdf},
+issn = {0022-2836},
+journal = {Journal of Molecular Biology},
+month = {jul},
+number = {1},
+pages = {99--105},
+publisher = {Academic Press},
+title = {{Signal sequences: The limits of variation}},
+url = {https://www.sciencedirect.com/science/article/pii/0022283685900464},
+volume = {184},
+year = {1985}
+}
+@article{Petersen2011,
+abstract = {SignalP 4.0: discriminating signal peptides from transmembrane regions},
+author = {Petersen, Thomas Nordahl and Brunak, S{\o}ren and von Heijne, Gunnar and Nielsen, Henrik},
+doi = {10.1038/nmeth.1701},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Petersen et al. - 2011 - SignalP 4.0 discriminating signal peptides from transmembrane regions.pdf:pdf},
+issn = {1548-7091},
+journal = {Nature Methods},
+keywords = {Bioinformatics,Proteomic analysis},
+month = {oct},
+number = {10},
+pages = {785--786},
+publisher = {Nature Publishing Group},
+title = {{SignalP 4.0: discriminating signal peptides from transmembrane regions}},
+url = {http://www.nature.com/articles/nmeth.1701},
+volume = {8},
+year = {2011}
+}
+@article{Petersen,
+author = {Petersen, TN and Brunak, S and von Heijne, G and Methods, H Nielsen - Nature and undefined 2011},
+journal = {nature.com},
+title = {{SignalP 4.0: discriminating signal peptides from transmembrane regions}},
+url = {https://www.nature.com/nmeth/journal/v8/n10/abs/nmeth.1701.html}
+}
+@article{VonHeijne1990,
+abstract = {In both prokaryotic and eukaryotic cells, proteins are allowed entry into the secretory pathway only if they are endowed with a specific targeting signal: a signal peptide (SP). The SP is in most cases a transient extension to the amino terminus of the protein and is removed by one of a small class of enzymes known as signal peptidases once its targeting function has been carried out. Many integral membrane proteins remain anchored to the membrane by an uncleared SP, or by a succession of SP-like "starttransfer" and "stop-transfer" sequences. A number of reviews dealing with protein secretion in general and signal peptides in particular have been published in the last coupled of years (Briggs {\&} Gierasch, 1986; von Heijne, 1988a,b; Gierasch, 1989); here, I will concentration on the most recent data on signal peptide structure and function.},
+author = {von Heijne, Gunnar},
+doi = {10.1007/bf01868635},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/biology, 1990 - Unknown - The signal peptide.pdf:pdf},
+isbn = {0022-2631},
+issn = {0022-2631},
+journal = {J Membr Biol},
+pages = {195--201},
+pmid = {2197415},
+title = {{The Signal peptide}},
+url = {https://idp.springer.com/authorize/casa?redirect{\_}uri=https://link.springer.com/content/pdf/10.1007/BF01868635.pdf{\&}casa{\_}token=-1jdoYoUpgkAAAAA:SNuVRUzMhhHlJa-nUDB-iayTLXrvyCplFJ{\_}pERNxivlTjYtKgMNX{\_}WECM1C4xlrLboW-i99jRlv0E6gW},
+volume = {115},
+year = {1990}
+}
 @article{Traube1899,
 author = {Traube, J},
 journal = {Vortr},
